--- a/practice1/pom.xml
+++ b/practice1/pom.xml
@@ -22,6 +22,16 @@
   		<artifactId>junit</artifactId>
   		<version>4.10</version>
   		<scope>test</scope>
+     <exclusions>
+      <exclusion> 
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+      </exclusion>
+      <exclusion> 
+        <groupId>log4j</groupId>
+        <artifactId>log4j</artifactId>
+      </exclusion>
+    </exclusions> 
   	</dependency>
   </dependencies>
 </project>
